--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: arduino/arduino-lint-action
         uses: arduino/arduino-lint-action@v1.0.1
-        with:
-          library-manager: update
+#         with:
+#           library-manager: update
