--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=ELi_VmM_4_10
 version=1.0.0
-author=Raghuram, Prajwal <anish.bekal@e-lagori.com>
+author=Raghurama BL, Prajwal Natraj <anish.bekal@e-lagori.com>
 maintainer=Anish Bekal <anish.bekal@e-lagori.com>
 sentence=A library for using Variable gain microphone modules of E-LAGORi.
 paragraph= Has a microphone whose output amplitude can be controlled using I2C protocol.
